my first websites

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <div class id="abss"><img src="abs.png"  height="70" width="200"></div>
     <div class="nav1">
         <ul>
-            <li><a href="homepg.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="live.html">LIVE</a></li>
             <!-- <li><a href="#">NEWS</a></li> -->
             <li><a href="stores.html">SHOPPING</a></li>
