--- a/stores.html
+++ b/stores.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
         <div class="logo"><h1>ABS shop </h1></div>
         <ul class="menu">
-            <li><a href="homepg.html" class="active">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="">Account</a></li>
             <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
         </ul>
