--- a/stores.html
+++ b/stores.html
@@ -39,7 +39,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/1.jpg"></div>
+                <div class="img"><img src="1.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">men jersey</div>
                 <div class="box">
@@ -51,7 +51,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/2.jpg"></div>
+                <div class="img"><img src="2.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">men jersey</div>
                 <div class="box">
@@ -63,7 +63,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/3.jpg"></div>
+                <div class="img"><img src="3.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">men jersey</div>
                 <div class="box">
@@ -75,7 +75,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/4.jpg"></div>
+                <div class="img"><img src="4.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">men jersey</div>
                 <div class="box">
@@ -87,7 +87,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/5.jpg"></div>
+                <div class="img"><img src="5.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">men jersey</div>
                 <div class="box">
@@ -99,7 +99,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/6.jpg"></div>
+                <div class="img"><img src="6.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">men jersey</div>
                 <div class="box">
@@ -111,7 +111,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/7.jpg"></div>
+                <div class="img"><img src="7.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">men jersey</div>
                 <div class="box">
@@ -123,7 +123,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/8.jpg"></div>
+                <div class="img"><img src="8.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">men jersey</div>
                 <div class="box">
@@ -135,7 +135,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/9.jpg"></div>
+                <div class="img"><img src="9.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">men jersey</div>
                 <div class="box">
@@ -147,7 +147,7 @@
            <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/11.jpg"></div>
+                <div class="img"><img src="11.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">bad,ball,bicket</div>
                 <div class="box">
@@ -159,7 +159,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/12.jpg"></div>
+                <div class="img"><img src="12.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">player bag </div>
                 <div class="box">
@@ -171,7 +171,7 @@
            <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/13.jpg"></div>
+                <div class="img"><img src="13.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">player bag</div>
                 <div class="box">
@@ -183,7 +183,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/14.jpg"></div>
+                <div class="img"><img src="14.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">cricket lover</div>
                 <div class="box">
@@ -195,7 +195,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/15.jpg"></div>
+                <div class="img"><img src="15.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">Bed</div>
                 <div class="box">
@@ -207,7 +207,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/16.jpg"></div>
+                <div class="img"><img src="16.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">Bad ball</div>
                 <div class="box">
@@ -219,7 +219,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/17.jpg"></div>
+                <div class="img"><img src="17.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">ball</div>
                 <div class="box">
@@ -231,7 +231,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/18.jpg"></div>
+                <div class="img"><img src="18.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">ball</div>
                 <div class="box">
@@ -243,7 +243,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/19.jpg"></div>
+                <div class="img"><img src="19.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">Bad ball</div>
                 <div class="box">
@@ -255,7 +255,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/20.jpg"></div>
+                <div class="img"><img src="20.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title"> ball</div>
                 <div class="box">
@@ -267,7 +267,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/21.jpg"></div>
+                <div class="img"><img src="21.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">Bad ,ball ,bicket</div>
                 <div class="box">
@@ -279,7 +279,7 @@
             <!-- card start -->
 
             <div class="card">
-                <div class="img"><img src="/jersey/22.jpg"></div>
+                <div class="img"><img src="22.jpg"></div>
                 <div class="desc">Men</div>
                 <div class="title">ball bicket</div>
                 <div class="box">
