some small changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to the khel ki duniya</title>
+    <title>Welcome to the Sports & e-commerce website</title>
+    <link rel="shortcut icon" href="abs.png" type="image/x-icon">
     <link rel="stylesheet" href="homepg.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="icon.jpg" typr="photo/x-icon">
