--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                     <div class="icon"> <i class="fa fa-map-marker" aria-hidden="true"></i> </div>
                     <div class="text">
                         <h3>Address</h3>
-                        <p>shanti nagar pakri barawan<br>
+                        <p>shanti nagar pakri<br>
                         bhagalpur ,dist bhagalpur,812003</p>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                     <div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
                     <div class="text">
                         <h3>phone</h3>
-                        <p>9632587410</p>
+                        <p>7061297330</p>
                     </div>
                 </div>
                 <div class="box">
